# lilo

./: .gitignore  CMakeLists.txt  app.rc  main.cpp
.claude/: settings.json  settings.local.json
data/: DatabaseManager.cpp  DatabaseManager.h  TransactionModel.cpp
logic/: AccountManager.cpp  AuthManager.cpp  NotificationManager.cpp  NotificationManager.h  SearchEngine.cpp  SearchEngine.h  TransactionManager.cpp  TransferManager.cpp
resources/: make_icon.py  resources.qrc
ui/: AccountWidget.cpp  BudgetWidget.cpp  BudgetWidget.h  DashboardWidget.cpp  DashboardWidget.h  LoginWindow.cpp  MainWindow.cpp  MainWindow.h  TransactionWidget.cpp  TransactionWidget.h  TransferDialog.cpp  TransferDialog.h
